Colaboratory를 통해 생성됨

--- a/210928_파이썬_문법_실전코드.ipynb
+++ b/210928_파이썬_문법_실전코드.ipynb
@@ -64,6 +64,9 @@
     "colab": {
       "name": "210928_파이썬 문법 실전코드.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "fa72583d"
+      ],
       "include_colab_link": true
     }
   },
@@ -326,10 +329,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "38ZfeBEQcfAs"
+      },
+      "source": [
+        "[질문]\n",
+        "최선욱 님이 모두에게:    오전 8:43\n",
+        "코랩에서 텍스트-코드 변경할 수 있는 기능이 있나요?\n",
+        "\n",
+        "aSSIST 신동욱 교수 님이 모두에게:    오전 8:51\n",
+        "Ctrl + M Y = 코드 셀로 변경\n",
+        "Ctrl + M M = 마크다운 셀로 변경\n",
+        "\n",
+        "최선욱 님이 모두에게:    오전 8:52\n",
+        "그리고 주피터 노트북에서 갑자기 \n",
+        "In[숫자] 부분에 In[*]이 되면서 코드 실행이 안될 때가 있는데 이건 왜 그런건가요?\n",
+        "\n",
+        ": 실행 중 또 실행하시거나, cmd(검은 창)이 동작이 멈춰 있을 때 실행이 안될 경우가 있습니다.\n",
+        "\n",
+        "코랩 단축키 참고 사이트\n",
+        "https://surfonmedia.tistory.com/1"
+      ],
+      "id": "38ZfeBEQcfAs"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ede83677"
       },
       "source": [
-        "### 고객명 부르기"
+        "###**고객명 부르기**"
       ],
       "id": "ede83677"
     },
@@ -375,7 +403,7 @@
         "id": "c7504936"
       },
       "source": [
-        "### 사원 코드 만들기"
+        "###**사원 코드 만들기**"
       ],
       "id": "c7504936"
     },
@@ -426,12 +454,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4aeb4358"
+        "id": "HQXhgWzkfVFt"
       },
       "source": [
-        ""
+        "###**format 함수 사용법**"
       ],
-      "id": "4aeb4358"
+      "id": "HQXhgWzkfVFt"
     },
     {
       "cell_type": "code",
@@ -473,7 +501,7 @@
         "id": "14553cbb"
       },
       "source": [
-        ""
+        "###**메뉴판 만들기**"
       ],
       "id": "14553cbb"
     },
@@ -530,7 +558,7 @@
         "id": "3ded235f"
       },
       "source": [
-        ""
+        "###**round 함수 사용법**"
       ],
       "id": "3ded235f"
     },
@@ -567,16 +595,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cf3b0135"
-      },
-      "source": [
-        ""
-      ],
-      "id": "cf3b0135"
     },
     {
       "cell_type": "code",
@@ -619,7 +637,7 @@
         "id": "08a123e8"
       },
       "source": [
-        ""
+        "###**휴대폰 번호 연결**"
       ],
       "id": "08a123e8"
     },
@@ -653,7 +671,7 @@
         "id": "1c233844"
       },
       "source": [
-        ""
+        "###**편의점에서 담배를 살 수 있는지**"
       ],
       "id": "1c233844"
     },
@@ -696,7 +714,7 @@
         "id": "1cb8f48c"
       },
       "source": [
-        ""
+        "###**감성주점 출입여부**"
       ],
       "id": "1cb8f48c"
     },
@@ -753,9 +771,39 @@
         "id": "e4e64b6b"
       },
       "source": [
-        ""
+        "###**try~except 예제**"
       ],
       "id": "e4e64b6b"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U3YaBsrTgANV"
+      },
+      "source": [
+        "number = input(\"정수 입력 > \")\n",
+        "number = int(number)\n",
+        "\n",
+        "if number > 0:\n",
+        "  # 양수를 입력할 떄 : 미구현\n",
+        "  raise NotImplementedError # 미구현 상태일 떄 표현되는 에러\n",
+        "else:\n",
+        "  # 음수를 입력할 떄 : 미구현\n",
+        "  raise NotImplementedError # 미구현 상태일 떄 표현되는 에러"
+      ],
+      "id": "U3YaBsrTgANV",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H-ixCycthN-3"
+      },
+      "source": [
+        "###**점수별 학점 추출기**"
+      ],
+      "id": "H-ixCycthN-3"
     },
     {
       "cell_type": "code",
@@ -924,7 +972,7 @@
         "id": "b0506668"
       },
       "source": [
-        ""
+        "###**오늘로부터 이성 친구 사귄지 몇 일 되는 날인지?**"
       ],
       "id": "b0506668"
     },
@@ -1171,7 +1219,7 @@
         "id": "86bb7f2a"
       },
       "source": [
-        ""
+        "###**코로나 단계별 수칙**"
       ],
       "id": "86bb7f2a"
     },
@@ -1239,7 +1287,7 @@
         "id": "07931964"
       },
       "source": [
-        ""
+        "###**엑셀 날짜 데이터 규칙 구현(<30 일 때 자동으로 20, >=30 자동으로 19 붙이기)**"
       ],
       "id": "07931964"
     },
