Colaboratory를 통해 생성됨

--- a/210928_파이썬_문법_실전코드.ipynb
+++ b/210928_파이썬_문법_실전코드.ipynb
@@ -64,9 +64,7 @@
     "colab": {
       "name": "210928_파이썬 문법 실전코드.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "fa72583d"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -80,6 +78,41 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/sdw1621/0_LG/blob/main/210928_%ED%8C%8C%EC%9D%B4%EC%8D%AC_%EB%AC%B8%EB%B2%95_%EC%8B%A4%EC%A0%84%EC%BD%94%EB%93%9C.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "38ZfeBEQcfAs"
+      },
+      "source": [
+        "[질문]\n",
+        "최선욱 님이 모두에게:    오전 8:43\n",
+        "코랩에서 텍스트-코드 변경할 수 있는 기능이 있나요?\n",
+        "\n",
+        "aSSIST 신동욱 교수 님이 모두에게:    오전 8:51\n",
+        "Ctrl + M Y = 코드 셀로 변경\n",
+        "Ctrl + M M = 마크다운 셀로 변경\n",
+        "\n",
+        "최선욱 님이 모두에게:    오전 8:52\n",
+        "그리고 주피터 노트북에서 갑자기 \n",
+        "In[숫자] 부분에 In[*]이 되면서 코드 실행이 안될 때가 있는데 이건 왜 그런건가요?\n",
+        "\n",
+        ": 실행 중 또 실행하시거나, cmd(검은 창)이 동작이 멈춰 있을 때 실행이 안될 경우가 있습니다."
+      ],
+      "id": "38ZfeBEQcfAs"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A2946Tcth-YN"
+      },
+      "source": [
+        "코랩 단축키\n",
+        "\n",
+        "https://surfonmedia.tistory.com/1\n",
+        "\n"
+      ],
+      "id": "A2946Tcth-YN"
     },
     {
       "cell_type": "markdown",
@@ -325,31 +358,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "38ZfeBEQcfAs"
-      },
-      "source": [
-        "[질문]\n",
-        "최선욱 님이 모두에게:    오전 8:43\n",
-        "코랩에서 텍스트-코드 변경할 수 있는 기능이 있나요?\n",
-        "\n",
-        "aSSIST 신동욱 교수 님이 모두에게:    오전 8:51\n",
-        "Ctrl + M Y = 코드 셀로 변경\n",
-        "Ctrl + M M = 마크다운 셀로 변경\n",
-        "\n",
-        "최선욱 님이 모두에게:    오전 8:52\n",
-        "그리고 주피터 노트북에서 갑자기 \n",
-        "In[숫자] 부분에 In[*]이 되면서 코드 실행이 안될 때가 있는데 이건 왜 그런건가요?\n",
-        "\n",
-        ": 실행 중 또 실행하시거나, cmd(검은 창)이 동작이 멈춰 있을 때 실행이 안될 경우가 있습니다.\n",
-        "\n",
-        "코랩 단축키 참고 사이트\n",
-        "https://surfonmedia.tistory.com/1"
-      ],
-      "id": "38ZfeBEQcfAs"
     },
     {
       "cell_type": "markdown",
